--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,18 @@
 .h-vh9{
   height: 90vh;
 }
+
+.loading-overlay {
+  background: rgba(0, 0, 0, 0.6);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.loading-overlay .prin {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
